                           quantspectra = "Spectrum.xml"))' instead.
   [2014-12-07 Sun]
 o rename QuantPep3DData$Function column into QuantPep3DData$matchedEMRTs;
   closes #67 [2015-07-26 Sun]
 o remove "mergedEMRTs" argument from `findEMRTs`. Now `rescueEMRTs` has to be
   called manually at the end of the processing; close #93 [2015-07-26 Sun]

CHANGES IN VERSION 1.9.5
------------------------
 o update cross reference to qvalue::plot.qvalue in Synapter man page;
   closes #86 [2015-03-31 Tue]

CHANGES IN VERSION 1.9.4
------------------------
 o use biocstyle [2015-01-23 Fri]
 o use requireNamespace [2015-01-23 Fri]

CHANGES IN VERSION 1.9.3
------------------------
 o Filter entries in quantiation final peptides and Pep3D data that don't match
   in their intensity valus; see #42 for details. [2014-11-26 Wed]

CHANGES IN VERSION 1.9.2
------------------------
 o Only suggesting tcltk and tcltk2, as gui is now deprecated
   [2014-11-21 Fri]

CHANGES IN VERSION 1.9.1
------------------------
 o Deprecating synatperGUI [2014-11-10 Mon]
 o Directing questions to the Bioc support site [2014-11-10 Mon]

CHANGES IN VERSION 1.9.0
------------------------
 o new devel version for Bioc 3.1

CHANGES IN VERSION 1.7.0
------------------------
 o Deprecating synatperGUI [2014-11-10 Mon]
 o Directing questions to the Bioc support site [2014-11-10 Mon]

CHANGES IN VERSION 1.5.7
------------------------
 o Enable setting number of missed cleavages (closes #53) [2014-03-24 Mon]

CHANGES IN VERSION 1.5.6
------------------------
 o change the default value of grid.ppm.from to 2
   (was 5 before) [2014-03-05 Wed]
 o change the separator in GridDetails' names to ":"
   (was "." before) [2014-03-07 Fri]
 o test for corresponding Pep3D file (closes #42) [2014-03-19 Wed]

CHANGES IN VERSION 1.5.5
------------------------
 o fix a bug in the calculation of non unique matches in gridSearch2
   (part of searchGrid); results in a higher number of non unique matches