@@ -33,6 +33,8 @@ setGeneric("getRtQs", function(object, ...) standardGeneric("getRtQs"))
 setGeneric("getPepNumbers", function(object, ...) standardGeneric("getPepNumbers"))
 setGeneric("setFragmentMatchingPpmTolerance", function(object, ...) standardGeneric("setFragmentMatchingPpmTolerance"))
 setGeneric("getFragmentMatchingPpmTolerance", function(object, ...) standardGeneric("getFragmentMatchingPpmTolerance"))
+setGeneric("getIdentificationFragments", function(object, ...) standardGeneric("getIdentificationFragments"))
+setGeneric("getQuantitationSpectra", function(object, ...) standardGeneric("getQuantitationSpectra"))
 setGeneric("showFdrStats", function(object, ...) standardGeneric("showFdrStats"))
 setGeneric("filterPeptideLength", function(object, ...) standardGeneric("filterPeptideLength"))
 setGeneric("filterUniqueDbPeptides", function(object, ...) standardGeneric("filterUniqueDbPeptides"))
